src/objects/PMDI_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Full_Load_Filter__c</fullName>
        <description>This field is used for giving filter criteria for full load</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter filter criteria for full load like SourceTable=&quot;ALPIM&quot;. Use only characters =,!=,&lt;,&gt;. If you have multiple criteria, separate it by &apos;,&apos;</inlineHelpText>
        <label>Full Load Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for checking whether it is a full load or delta load</description>
        <label>Full Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use ConfId for Configuration Items,ItemId for Portfolio Items, NSNCode for ProductSalesItems</inlineHelpText>
        <label>NSNCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMDI_Settings</label>
</CustomObject>